src/objects/hed__Behavior_Involvement__c.object
<CustomObject>
    <description>Stores information about the people involved in a Case that represents a behavior event.</description>
    <fields>
        <fullName>hed__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Case that represents the event being reported.</description>
        <inlineHelpText>The Case that represents the event being reported.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Behavior Involvements</relationshipLabel>
        <relationshipName>Behavior_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student or faculty Contact who was directly involved in the event.</description>
        <inlineHelpText>The student or faculty Contact who was directly involved in the event.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Behavior Involvements</relationshipLabel>
        <relationshipName>Behavior_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>A description of a person&apos;s involvement in a behavior event.</description>
        <inlineHelpText>A description of a person&apos;s involvement in a behavior event.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Role__c</fullName>
        <description>The role this person played in the event.</description>
        <inlineHelpText>The role this person played in the event.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetrator</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>Victim</fullName>
                </value>
                <value>
                    <fullName>Witness</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Behavior Involvement</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>Behavior Involvement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Involvements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>